Fix value for image type to reflect the deprecated status of the split images and use unified by default
Signed-off-by: Isaiah Olson <isaiah@olson-network.com>

--- a/packages/apps/foundationdb/values.yaml
+++ b/packages/apps/foundationdb/values.yaml
@@ -77,8 +77,8 @@ customParameters: []
 # Example:
 # - knob_disable_posix_kernel_aio=1
 
-## @param imageType {string enum:"unified,split"} Container image deployment type (split recommended for production)
-imageType: "split"
+## @param imageType {string enum:"unified,split"} Container image deployment type
+imageType: "unified"
 
 ## @param securityContext {securityContext} Security context for containers
 ## @field securityContext.runAsUser {int} User ID to run the container
