--- a/packages/apps/foundationdb/values.yaml
+++ b/packages/apps/foundationdb/values.yaml
@@ -10,6 +10,8 @@
 ## @field clusterProcessCounts.storage {int} Number of storage processes (determines cluster size)
 ## @field clusterProcessCounts.cluster_controller {int} Number of cluster controller processes
 ## @field cluster.version {string} Version of FoundationDB to use
+## @field cluster.redundancyMode {string} Database redundancy mode (single, double, triple, three_datacenter, three_datacenter_fallback)
+## @field cluster.storageEngine {string} Storage engine (ssd-2, ssd-redwood-v1, ssd-rocksdb-v1, memory)
 ## @field cluster.faultDomain {clusterFaultDomain} Fault domain configuration
 ## @field clusterFaultDomain.key {string} Fault domain key
 ## @field clusterFaultDomain.valueFrom {string} Fault domain value source
@@ -20,6 +22,8 @@ cluster:
     cluster_controller: 1
 
   version: "7.3.63"
+  redundancyMode: "double"  # Database redundancy mode
+  storageEngine: "ssd-2"    # Storage engine
 
   faultDomain:
     key: "kubernetes.io/hostname"
