--- a/packages/system/kubeovn/Makefile
+++ b/packages/system/kubeovn/Makefile
@@ -1,4 +1,4 @@
-KUBEOVN_TAG=$(shell awk '$$1 == "version:" {print $$2}' charts/kube-ovn/Chart.yaml)
+KUBEOVN_TAG=v0.37.3
 
 export NAME=kubeovn
 export NAMESPACE=cozy-$(NAME)
@@ -7,28 +7,7 @@ include ../../../scripts/common-envs.mk
 include ../../../scripts/package.mk
 
 update:
-	rm -rf charts && mkdir -p charts/kube-ovn
-	tag=$$(git ls-remote --tags --sort="v:refname" https://github.com/kubeovn/kube-ovn | awk -F'[/^]' '{print $$3}' | grep '^v1\.14\.' | tail -n1 ) && \
-	curl -sSL https://github.com/kubeovn/kube-ovn/archive/refs/tags/$${tag}.tar.gz | \
-	tar xzvf - --strip 1 kube-ovn-$${tag#*v}/charts/kube-ovn
-	patch --no-backup-if-mismatch -p4 < patches/cozyconfig.diff
-	patch --no-backup-if-mismatch -p4 < patches/mtu.diff
-	version=$$(awk '$$1 == "version:" {print $$2}' charts/kube-ovn/Chart.yaml) && \
-	sed -i "s/ARG VERSION=.*/ARG VERSION=$${version}/" images/kubeovn/Dockerfile && \
-	sed -i "s/ARG TAG=.*/ARG TAG=$${version}/" images/kubeovn/Dockerfile
-
-image:
-	docker buildx build images/kubeovn \
-		--tag $(REGISTRY)/kubeovn:$(call settag,$(KUBEOVN_TAG)) \
-		--tag $(REGISTRY)/kubeovn:$(call settag,$(KUBEOVN_TAG)-$(TAG)) \
-		--cache-from type=registry,ref=$(REGISTRY)/kubeovn:latest \
-		--cache-to type=inline \
-		--metadata-file images/kubeovn.json \
-		$(BUILDX_ARGS)
-	REGISTRY="$(REGISTRY)" \
-		yq -i '.global.registry.address = strenv(REGISTRY)' values.yaml
-	REPOSITORY="kubeovn" \
-		yq -i '.global.images.kubeovn.repository = strenv(REPOSITORY)' values.yaml
-	TAG="$(call settag,$(KUBEOVN_TAG))@$$(yq e '."containerimage.digest"' images/kubeovn.json -o json -r)" \
-		yq -i '.global.images.kubeovn.tag = strenv(TAG)' values.yaml
-	rm -f images/kubeovn.json
+	rm -rf charts values.yaml Chart.yaml
+	tag=$(KUBEOVN_TAG) && \
+	curl -sSL https://github.com/cozystack/kubeovn/archive/refs/tags/$${tag}.tar.gz | \
+	tar xzvf - --strip 2 kubeovn-$${tag#*v}/chart
