fixed: correct dependsOn distro-full
Signed-off-by: Apinant U-suwantim <Hello@Apinant.dev>

--- a/packages/core/platform/bundles/distro-full.yaml
+++ b/packages/core/platform/bundles/distro-full.yaml
@@ -78,7 +78,7 @@ releases:
   releaseName: cozystack-resource-definition-crd
   chart: cozystack-resource-definition-crd
   namespace: cozy-system
-  dependsOn: [cilium,cozystack-controller]
+  dependsOn: [cilium]
 
 - name: cozystack-resource-definitions
   releaseName: cozystack-resource-definitions
