--- a/packages/system/fluxcd-operator/charts/flux-operator/templates/crds.yaml
+++ b/packages/system/fluxcd-operator/charts/flux-operator/templates/crds.yaml
@@ -203,6 +203,15 @@ spec:
                       Registry address to pull the distribution images from
                       e.g. 'ghcr.io/fluxcd'.
                     type: string
+                  variant:
+                    description: |-
+                      Variant specifies the Flux distribution flavor stored
+                      in the registry.
+                    enum:
+                    - upstream-alpine
+                    - enterprise-alpine
+                    - enterprise-distroless
+                    type: string
                   version:
                     description: Version semver expression e.g. '2.x', '2.3.x'.
                     type: string
@@ -582,6 +591,12 @@ spec:
                 description: |-
                   LastAttemptedRevision is the version and digest of the
                   distribution config that was last attempted to reconcile.
+                type: string
+              lastHandledForceAt:
+                description: |-
+                  LastHandledForceAt holds the value of the most recent
+                  force request value, so a change of the annotation value
+                  can be detected.
                 type: string
               lastHandledReconcileAt:
                 description: |-
