--- a/packages/apps/postgres/values.yaml
+++ b/packages/apps/postgres/values.yaml
@@ -34,6 +34,17 @@ storageClass: ""
 external: false
 
 ##
+## @enum {string} Version
+## @value v18
+## @value v17
+## @value v16
+## @value v15
+## @value v14
+## @value v13
+
+## @param {Version} version - PostgreSQL major version to deploy
+version: v18
+
 ## @section Application-specific parameters
 ##
 
