[kubernetes] Add version management system with automated version updates
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/packages/apps/kubernetes/values.yaml
+++ b/packages/apps/kubernetes/values.yaml
@@ -46,8 +46,18 @@ nodeGroups:
     resources: {}
     gpus: []
 
-## @param {string} version - Kubernetes version (vMAJOR.MINOR). Supported: 1.28–1.33.
+##
+## @enum {string} Version
+## @value v1.33
+## @value v1.32
+## @value v1.31
+## @value v1.30
+## @value v1.29
+## @value v1.28
+
+## @param {Version} version - Kubernetes major.minor version to deploy
 version: "v1.33"
+
 
 ## @param {string} host - External hostname for Kubernetes cluster. Defaults to `<cluster-name>.<tenant-host>` if empty.
 host: ""
