--- a/packages/core/platform/bundles/paas-full.yaml
+++ b/packages/core/platform/bundles/paas-full.yaml
@@ -142,17 +142,23 @@ releases:
   namespace: cozy-cert-manager
   dependsOn: [cilium,kubeovn,cert-manager]
 
+- name: prometheus-operator-crds
+  releaseName: prometheus-operator-crds
+  chart: cozy-prometheus-operator-crds
+  namespace: cozy-victoria-metrics-operator
+  dependsOn: []
+
 - name: metrics-server
   releaseName: metrics-server
   chart: cozy-metrics-server
   namespace: cozy-monitoring
-  dependsOn: [cilium]
+  dependsOn: [cilium,kubeovn,prometheus-operator-crds]
 
 - name: victoria-metrics-operator
   releaseName: victoria-metrics-operator
   chart: cozy-victoria-metrics-operator
   namespace: cozy-victoria-metrics-operator
-  dependsOn: [cilium,kubeovn,cert-manager]
+  dependsOn: [cilium,kubeovn,cert-manager,prometheus-operator-crds]
 
 - name: monitoring-agents
   releaseName: monitoring-agents
