[monitoring] Improve tenant metrics collection This patch introduces vmagent support inside tenant-level monitoring stacks, ensuring that all tenant workloads have consistent and reliable metrics scraping. By deploying a vmagent per tenant and wiring it to the configured VictoriaMetrics short- and long-term storage, metrics are now properly collected, labeled, and remote-written. This resolves gaps where tenant environments previously missed metrics due to the absence of dedicated agents.
```release-note
[monitoring,platform] Add vmagent integration into tenant monitoring
stacks to ensure complete and correct metrics collection for all tenants.
```

Signed-off-by: IvanHunters <xorokhotnikov@gmail.com>

--- a/packages/extra/monitoring/values.yaml
+++ b/packages/extra/monitoring/values.yaml
@@ -154,3 +154,25 @@ grafana:
     requests:
       cpu: 100m
       memory: 256Mi
+##
+## @section Vmagent configuration
+##
+
+## @typedef {struct} VmagentRemoteWrite - Remote write configuration.
+## @typedef {stringSlice} VmagentRemoteWriteURLs - List of remoteWrite endpoint URLs.
+
+## @typedef {struct} VmagentExternalLabels - External labels for metrics.
+## @field {string} [<key>] - Label value for the given key.
+
+## @typedef {struct} Vmagent - VictoriaMetrics Agent configuration.
+## @field {VmagentExternalLabels} [externalLabels] - External labels applied to all metrics.
+## @field {VmagentRemoteWrite} [remoteWrite] - Remote write configuration.
+
+## @param {Vmagent} vmagent - Configuration for VictoriaMetrics Agent.
+vmagent:
+  externalLabels:
+    cluster: cozystack
+  remoteWrite:
+    urls:
+      - http://vminsert-shortterm:8480/insert/0/prometheus
+      - http://vminsert-longterm:8480/insert/0/prometheus
