[backups] Fix malformed glob and split in template
## What this PR does

A malformed glob ("*" instead of "*.yaml") captured the .gitattributes
file and sent it to the templating engine. Using `split` instead of
`splitList` on a string returned a map instead of a list, so templating
broke on `mustLast`. This patch corrects the errors.

### Release note

```release-note
[backups] Fix template-breaking errors in the backup-controller Helm
chart.
```

Signed-off-by: Timofei Larkin <lllamnyp@gmail.com>

--- a/packages/system/backup-controller/templates/deployment.yaml
+++ b/packages/system/backup-controller/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
         {{- end }}
         ports:
         - name: metrics
-          containerPort: {{ split ":" .Values.backupController.metrics.bindAddress | mustLast }}
+          containerPort: {{ splitList ":" .Values.backupController.metrics.bindAddress | mustLast }}
         - name: health
           containerPort: 8081
         readinessProbe:
