--- a/packages/system/backup-controller/templates/crds.yaml
+++ b/packages/system/backup-controller/templates/crds.yaml
@@ -1,4 +1,4 @@
-{{- range $path, $_ := .Files.Glob "definitions/*" }}
+{{- range $path, $_ := .Files.Glob "definitions/*.yaml" }}
 ---
 {{ $.Files.Get $path }}
 {{- end }}
