[monitoring] Add SLACK_SEVERITY_FILTER field and VMAgent for tenant monitoring
What this PR does
This PR introduces the SLACK_SEVERITY_FILTER environment variable in the Alerta deployment to enable
filtering of alert severities for Slack notifications based on the disabledSeverity configuration.
Additionally, it adds a VMAgent resource template for scraping metrics within tenant namespaces, improving
monitoring granularity and control.

```release-note
[monitoring] Add SLACK_SEVERITY_FILTER for filtering Slack alert severities and VMAgent configuration for
tenant-specific metrics scraping.
```

Signed-off-by: IvanHunters <xorokhotnikov@gmail.com>

--- a/packages/extra/monitoring/values.yaml
+++ b/packages/extra/monitoring/values.yaml
@@ -99,10 +99,11 @@ logsStorages:
 ## @typedef {struct} TelegramAlerts - Telegram alert configuration.
 ## @field {string} token - Telegram bot token.
 ## @field {string} chatID - Telegram chat ID(s), separated by commas.
-## @field {string} [disabledSeverity] - List of severities without alerts (e.g. "informational,warning").
+## @field {[]string} [disabledSeverity] - List of severities without alerts (e.g. ["informational","warning"]).
 
 ## @typedef {struct} SlackAlerts - Slack alert configuration.
 ## @field {string} url - Configuration uri for Slack alerts.
+## @field {[]string} [disabledSeverity] - List of severities without alerts (e.g. ["informational","warning"]).
 
 ## @typedef {struct} Alerts - Alert routing configuration.
 ## @field {TelegramAlerts} [telegram] - Configuration for Telegram alerts.
@@ -129,9 +130,10 @@ alerta:
     telegram:
       token: ""
       chatID: ""
-      disabledSeverity: ""
+      disabledSeverity: []
     slack:
       url: ""
+      disabledSeverity: []
 ##
 ## @section Grafana configuration
 ##
