[backups] Add indices to core backup resources
## What this PR does

This adds custom indexable fields on core backup resources to enable
filtering by backed-up application. This will later be useful for
displaying backup resources in the dashboard: it will be possible to
filter them with a field selector to display only those backup resources
that are relevant to a given application.

### Release note

```release-note
[backups] Enable filtering backup resources by backed up application for
per-app views of backups.
```

Signed-off-by: Timofei Larkin <lllamnyp@gmail.com>

--- a/packages/system/backup-controller/definitions/backups.cozystack.io_backupjobs.yaml
+++ b/packages/system/backup-controller/definitions/backups.cozystack.io_backupjobs.yaml
@@ -227,5 +227,9 @@ spec:
                 type: string
             type: object
         type: object
+    selectableFields:
+    - jsonPath: .spec.applicationRef.apiGroup
+    - jsonPath: .spec.applicationRef.kind
+    - jsonPath: .spec.applicationRef.name
     served: true
     storage: true
